# PLCUnit

./: .gitignore  CMakeLists.txt  ReadMe.md  maintest.cc  plc_load_info.txt  plcloginfo.txt  return_global_info.txt
iec-runtime/: CMakeLists.txt
iec-runtime/include/: libsys.h  plcmodel.h
iec-runtime/kernel/: callstk.cc  istring.cc  loader.cc  main.cc  vm.cc
iec-runtime/kernel/libsys/: libbase.cc
include/: logger.h
